YAPIS/2-3lr/generated/ExprParser.py
# Generated from ExprParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "ExprParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'node'", "'graph'", "'arc'", "'nodes'", 
                     "'arcs'", "'int'", "'for'", "'while'", "'if'", "'else'", 
                     "'switch'", "'case'", "'break'", "'return'", "'continue'", 
                     "'function'", "'+'", "'-'", "'/'", "'&'", "'*'", "'and'", 
                     "'or'", "'not'", "'='", "','", "';'", "':'", "'!'", 
                     "'['", "']'", "'<'", "'>'", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "NODE", "GRAPH", "ARC", "N_ELEM", "A_ELEM", 
                      "TYPE_INT", "FOR", "WHILE", "IF", "ELSE", "SWITCH", 
                      "CASE", "BREAK", "RETURN", "CONTINUE", "FUNCTION", 
                      "UNION", "DIFF", "SYMDIFF", "INTERSEC", "CART", "AND", 
                      "OR", "NOT", "EQ", "COMMA", "SEMI", "COLON", "EXCLAM", 
                      "LSQUARE", "RSQUARE", "LANGLE", "RANGLE", "LPAREN", 
                      "RPAREN", "LCURLY", "RCURLY", "INT", "ID", "WS" ]

    RULE_types = 0
    RULE_operation = 1
    RULE_anoun = 2
    RULE_node = 3
    RULE_arc = 4
    RULE_program = 5
    RULE_stat = 6
    RULE_def = 7
    RULE_expr = 8
    RULE_cicle = 9
    RULE_condition = 10
    RULE_func = 11

    ruleNames =  [ "types", "operation", "anoun", "node", "arc", "program", 
                   "stat", "def", "expr", "cicle", "condition", "func" ]

    EOF = Token.EOF
    NODE=1
    GRAPH=2
    ARC=3
    N_ELEM=4
    A_ELEM=5
    TYPE_INT=6
    FOR=7
    WHILE=8
    IF=9
    ELSE=10
    SWITCH=11
    CASE=12
    BREAK=13
    RETURN=14
    CONTINUE=15
    FUNCTION=16
    UNION=17
    DIFF=18
    SYMDIFF=19
    INTERSEC=20
    CART=21
    AND=22
    OR=23
    NOT=24
    EQ=25
    COMMA=26
    SEMI=27
    COLON=28
    EXCLAM=29
    LSQUARE=30
    RSQUARE=31
    LANGLE=32
    RANGLE=33
    LPAREN=34
    RPAREN=35
    LCURLY=36
    RCURLY=37
    INT=38
    ID=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE(self):
            return self.getToken(ExprParser.NODE, 0)

        def ARC(self):
            return self.getToken(ExprParser.ARC, 0)

        def GRAPH(self):
            return self.getToken(ExprParser.GRAPH, 0)

        def TYPE_INT(self):
            return self.getToken(ExprParser.TYPE_INT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)




    def types(self):

        localctx = ExprParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 78) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNION(self):
            return self.getToken(ExprParser.UNION, 0)

        def DIFF(self):
            return self.getToken(ExprParser.DIFF, 0)

        def SYMDIFF(self):
            return self.getToken(ExprParser.SYMDIFF, 0)

        def INTERSEC(self):
            return self.getToken(ExprParser.INTERSEC, 0)

        def CART(self):
            return self.getToken(ExprParser.CART, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)




    def operation(self):

        localctx = ExprParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_operation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4063232) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnounContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(ExprParser.TypesContext,0)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def TYPE_INT(self):
            return self.getToken(ExprParser.TYPE_INT, 0)

        def EQ(self):
            return self.getToken(ExprParser.EQ, 0)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def GRAPH(self):
            return self.getToken(ExprParser.GRAPH, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def ARC(self):
            return self.getToken(ExprParser.ARC, 0)

        def LANGLE(self):
            return self.getToken(ExprParser.LANGLE, 0)

        def node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.NodeContext)
            else:
                return self.getTypedRuleContext(ExprParser.NodeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def RANGLE(self):
            return self.getToken(ExprParser.RANGLE, 0)

        def LSQUARE(self):
            return self.getToken(ExprParser.LSQUARE, 0)

        def N_ELEM(self):
            return self.getToken(ExprParser.N_ELEM, 0)

        def COLON(self):
            return self.getToken(ExprParser.COLON, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.RPAREN)
            else:
                return self.getToken(ExprParser.RPAREN, i)

        def A_ELEM(self):
            return self.getToken(ExprParser.A_ELEM, 0)

        def RSQUARE(self):
            return self.getToken(ExprParser.RSQUARE, 0)

        def arc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ArcContext)
            else:
                return self.getTypedRuleContext(ExprParser.ArcContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_anoun

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnoun" ):
                listener.enterAnoun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnoun" ):
                listener.exitAnoun(self)




    def anoun(self):

        localctx = ExprParser.AnounContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_anoun)
        self._la = 0 # Token type
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.types()
                self.state = 29
                self.match(ExprParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.match(ExprParser.TYPE_INT)
                self.state = 32
                self.match(ExprParser.ID)
                self.state = 33
                self.match(ExprParser.EQ)
                self.state = 34
                self.match(ExprParser.INT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.match(ExprParser.GRAPH)
                self.state = 36
                self.match(ExprParser.ID)
                self.state = 37
                self.match(ExprParser.EQ)
                self.state = 38
                self.expr(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.match(ExprParser.ARC)
                self.state = 40
                self.match(ExprParser.ID)
                self.state = 41
                self.match(ExprParser.EQ)
                self.state = 42
                self.match(ExprParser.LANGLE)
                self.state = 43
                self.node()
                self.state = 44
                self.match(ExprParser.COMMA)
                self.state = 45
                self.node()
                self.state = 46
                self.match(ExprParser.RANGLE)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.match(ExprParser.GRAPH)
                self.state = 49
                self.match(ExprParser.ID)
                self.state = 50
                self.match(ExprParser.EQ)
                self.state = 51
                self.match(ExprParser.LSQUARE)
                self.state = 52
                self.match(ExprParser.N_ELEM)
                self.state = 53
                self.match(ExprParser.COLON)
                self.state = 54
                self.match(ExprParser.LPAREN)
                self.state = 56
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 55
                    self.node()


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 58
                self.node()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==26:
                    self.state = 59
                    self.match(ExprParser.COMMA)
                    self.state = 60
                    self.node()
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self.match(ExprParser.RPAREN)
                self.state = 67
                self.match(ExprParser.COMMA)
                self.state = 68
                self.match(ExprParser.A_ELEM)
                self.state = 69
                self.match(ExprParser.COLON)
                self.state = 70
                self.match(ExprParser.LPAREN)
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 71
                    self.arc()


                self.state = 74
                self.arc()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==26:
                    self.state = 75
                    self.match(ExprParser.COMMA)
                    self.state = 76
                    self.arc()
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 82
                self.match(ExprParser.RPAREN)
                self.state = 83
                self.match(ExprParser.RSQUARE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def NODE(self):
            return self.getToken(ExprParser.NODE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)




    def node(self):

        localctx = ExprParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_node)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(ExprParser.ID)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(ExprParser.NODE)
                self.state = 89
                self.match(ExprParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def ARC(self):
            return self.getToken(ExprParser.ARC, 0)

        def EQ(self):
            return self.getToken(ExprParser.EQ, 0)

        def LANGLE(self):
            return self.getToken(ExprParser.LANGLE, 0)

        def node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.NodeContext)
            else:
                return self.getTypedRuleContext(ExprParser.NodeContext,i)


        def COMMA(self):
            return self.getToken(ExprParser.COMMA, 0)

        def RANGLE(self):
            return self.getToken(ExprParser.RANGLE, 0)

        def SEMI(self):
            return self.getToken(ExprParser.SEMI, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_arc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArc" ):
                listener.enterArc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArc" ):
                listener.exitArc(self)




    def arc(self):

        localctx = ExprParser.ArcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arc)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(ExprParser.ID)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(ExprParser.ARC)
                self.state = 94
                self.match(ExprParser.ID)
                self.state = 95
                self.match(ExprParser.EQ)
                self.state = 96
                self.match(ExprParser.LANGLE)
                self.state = 97
                self.node()
                self.state = 98
                self.match(ExprParser.COMMA)
                self.state = 99
                self.node()
                self.state = 100
                self.match(ExprParser.RANGLE)
                self.state = 101
                self.match(ExprParser.SEMI)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.match(ExprParser.LANGLE)
                self.state = 104
                self.node()
                self.state = 105
                self.match(ExprParser.COMMA)
                self.state = 106
                self.node()
                self.state = 107
                self.match(ExprParser.RANGLE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def anoun(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.AnounContext)
            else:
                return self.getTypedRuleContext(ExprParser.AnounContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 824650623950) != 0):
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 111
                    self.stat()
                    pass

                elif la_ == 2:
                    self.state = 112
                    self.anoun()
                    pass


                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def EQ(self):
            return self.getToken(ExprParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(ExprParser.SEMI, 0)

        def anoun(self):
            return self.getTypedRuleContext(ExprParser.AnounContext,0)


        def cicle(self):
            return self.getTypedRuleContext(ExprParser.CicleContext,0)


        def condition(self):
            return self.getTypedRuleContext(ExprParser.ConditionContext,0)


        def def_(self):
            return self.getTypedRuleContext(ExprParser.DefContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = ExprParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stat)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(ExprParser.ID)
                self.state = 121
                self.match(ExprParser.EQ)
                self.state = 122
                self.expr(0)
                self.state = 123
                self.match(ExprParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.expr(0)
                self.state = 126
                self.match(ExprParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.anoun()
                self.state = 129
                self.match(ExprParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.cicle()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.condition()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 133
                self.def_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ExprParser.FUNCTION, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(ExprParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(ExprParser.RCURLY, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef" ):
                listener.enterDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef" ):
                listener.exitDef(self)




    def def_(self):

        localctx = ExprParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_def)
        self._la = 0 # Token type
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(ExprParser.FUNCTION)
                self.state = 137
                self.match(ExprParser.ID)
                self.state = 138
                self.match(ExprParser.LPAREN)
                self.state = 140
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 139
                    self.match(ExprParser.ID)


                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(ExprParser.ID)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==26:
                    self.state = 143
                    self.match(ExprParser.COMMA)
                    self.state = 144
                    self.match(ExprParser.ID)
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 150
                self.match(ExprParser.RPAREN)
                self.state = 151
                self.match(ExprParser.LCURLY)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 824650623950) != 0):
                    self.state = 152
                    self.stat()
                    self.state = 157
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 158
                self.match(ExprParser.RCURLY)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(ExprParser.FuncContext,0)


        def NOT(self):
            return self.getToken(ExprParser.NOT, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def BREAK(self):
            return self.getToken(ExprParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(ExprParser.CONTINUE, 0)

        def RETURN(self):
            return self.getToken(ExprParser.RETURN, 0)

        def operation(self):
            return self.getTypedRuleContext(ExprParser.OperationContext,0)


        def AND(self):
            return self.getToken(ExprParser.AND, 0)

        def OR(self):
            return self.getToken(ExprParser.OR, 0)

        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.EQ)
            else:
                return self.getToken(ExprParser.EQ, i)

        def LANGLE(self):
            return self.getToken(ExprParser.LANGLE, 0)

        def RANGLE(self):
            return self.getToken(ExprParser.RANGLE, 0)

        def EXCLAM(self):
            return self.getToken(ExprParser.EXCLAM, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 162
                self.func()
                pass

            elif la_ == 2:
                self.state = 163
                self.match(ExprParser.NOT)
                self.state = 164
                self.expr(9)
                pass

            elif la_ == 3:
                self.state = 165
                self.match(ExprParser.ID)
                pass

            elif la_ == 4:
                self.state = 166
                self.match(ExprParser.INT)
                pass

            elif la_ == 5:
                self.state = 167
                self.match(ExprParser.BREAK)
                pass

            elif la_ == 6:
                self.state = 168
                self.match(ExprParser.CONTINUE)
                pass

            elif la_ == 7:
                self.state = 169
                self.match(ExprParser.RETURN)
                self.state = 170
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 195
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 193
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 173
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 174
                        self.operation()
                        self.state = 175
                        self.expr(11)
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 177
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 178
                        self.match(ExprParser.AND)
                        self.state = 179
                        self.expr(9)
                        pass

                    elif la_ == 3:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 180
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 181
                        self.match(ExprParser.OR)
                        self.state = 182
                        self.expr(8)
                        pass

                    elif la_ == 4:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 183
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 190
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [32, 33]:
                            self.state = 184
                            _la = self._input.LA(1)
                            if not(_la==32 or _la==33):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()
                            self.state = 186
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if _la==25:
                                self.state = 185
                                self.match(ExprParser.EQ)


                            pass
                        elif token in [25, 29]:
                            self.state = 188
                            _la = self._input.LA(1)
                            if not(_la==25 or _la==29):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()
                            self.state = 189
                            self.match(ExprParser.EQ)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 192
                        self.expr(7)
                        pass

             
                self.state = 197
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CicleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ExprParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(ExprParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(ExprParser.RCURLY, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def FOR(self):
            return self.getToken(ExprParser.FOR, 0)

        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.EQ)
            else:
                return self.getToken(ExprParser.EQ, i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.SEMI)
            else:
                return self.getToken(ExprParser.SEMI, i)

        def ID(self, i:int=None):
